modified front pages

--- a/src/main/resources/templates/analysis/statistic_analysis.html
+++ b/src/main/resources/templates/analysis/statistic_analysis.html
@@ -163,7 +163,7 @@
                             </tr>
                             <tr>
                                 <td >1</td>
-                                <td >常规平均记分</td>
+                                <td >常规平均计分</td>
                                 <td >温度，湿度，最大声压，pm2.5,pm10，银幕中心亮度，亮度均匀度，顺序对比度，帧内对比度，设备故障概率</td>
                                 <td >1000</td>
                                 <td >李维</td>
