--- a/src/main/resources/templates/assets/details_room.html
+++ b/src/main/resources/templates/assets/details_room.html
@@ -270,11 +270,13 @@
            <address></address>
               <!-- Table row -->
               <div class="row">
-			  <h4>&nbsp&nbsp&nbsp放映机信息：</h4>
+			  <h4>&nbsp&nbsp&nbsp设备信息：</h4>
                 <div class="col-12 table-responsive">
                   <table class="table table-striped">
                     <thead>
                     <tr>
+                      <th>序号</th>
+                      <th>设备类型</th>
                       <th>品牌</th>
                       <th>型号</th>
                       <th>序列号</th>
@@ -286,6 +288,8 @@
                     </thead>
                     <tbody>
                     <tr>
+                      <td>1 </td>
+                      <td>放映机</td>
                       <td>科视Christie </td>
                       <td>CP4325-RGB</td>
                       <td>28114841554</td>
@@ -294,242 +298,92 @@
 	      <th><a href="/assets/equipment_details_k">>>详情</a></th>
                       <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-cp4325-rgb">官网详情</a> </th>
                     </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>
-              <!-- /.row -->
-			   <address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp服务器信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
                     <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
+                      <td>2 </td>
+                      <td>服务器</td>
                       <td>GDC</td>
                       <td>SX-2001A</td>
                       <td>28114841554</td>
                       <td>2018/3/2</td>
                       <td>-</td>
+                      <td>-</td>
                     </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>
-              <!-- /.row -->
-			   <address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp音频处理器信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
                     <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
+                      <td>3</td>
+                      <td>音频处理器</td>
                       <td>杜比</td>
                       <td>CP750</td>
                       <td>28114841554</td>
                       <td>2018/3/2</td>
                       <td>-</td>
+                      <td>-</td>
                     </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>
-              <!-- /.row -->
-			  
-              <address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp功放信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
                     <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
+                      <td>4</td>
+                      <td>功放</td>
                       <td>飞达</td>
                       <td>FPT-8004</td>
                       <td>45234135</td>
                       <td>2017/1/20</td>
                       <td>-</td>
+                      <td>-</td>
                     </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>
-              <!-- /.row --><address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp扬声器信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
                     <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
+                      <td>5</td>
+                      <td>扬声器</td>
                       <td>QSC</td>
                       <td>SC-1120两分频银幕扬声器</td>
                       <td>956453343</td>
                       <td>2017/1/20</td>
                       <td>-</td>
+                      <td>-</td>
                     </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>
-              <!-- /.row --><address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp TMS信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
                     <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
+                      <td>6</td>
+                      <td>TMS</td>
                       <td> </td>
                       <td>中影巴可TMS</td>
                       <td> </td>
                       <td> </td>
                       <td>-</td>
+                      <td>-</td>
                     </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>
-              <!-- /.row -->
-			  <address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp 3D系统信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
                     <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
+                      <td>7</td>
+                      <td>3D系统</td>
                       <td>飞迪欧</td>
                       <td>T05L</td>
                       <td>5343453434</td>
                       <td>2017/1/20</td>
                       <td>-</td>
+                      <td>-</td>
+                    </tr>
+                    <tr>
+                      <td>8</td>
+                      <td>4D系统</td>
+                      <td>MediaMation</td>
+                      <td>MX4D</td>
+                      <td> </td>
+                      <td> </td>
+                      <td>-</td>
+                      <td>-</td>
+                    </tr>
+                    <tr>
+                      <td>9</td>
+                      <td>银幕</td>
+                      <td>巨星银幕</td>
+                      <td>超级微孔银幕</td>
+                      <td>7343422</td>
+                      <td>2017/1/20</td>
+                      <td>-</td>
+                      <td>-</td>
                     </tr>
                     </tbody>
                   </table>
                 </div>
                 <!-- /.col -->
               </div>
-              <!-- /.row -->
-			  <address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp 4D系统信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
-                    <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <td>MediaMation</td>
-                      <td>MX4D</td>
-                      <td> </td>
-                      <td> </td>
-                      <td>-</td>
-                    </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>             
-
-			  <address></address>
-              <!-- Table row -->
-              <div class="row">
-			  <h4>&nbsp&nbsp&nbsp 银幕信息：</h4>
-                <div class="col-12 table-responsive">
-                  <table class="table table-striped">
-                    <thead>
-                    <tr>
-                      <th>品牌</th>
-                      <th>型号</th>
-                      <th>序列号</th>
-                      <th>购买日期</th>
-                      <th>备注</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <td>巨星银幕</td>
-                      <td>超级微孔银幕</td>
-                      <td>7343422</td>
-                      <td>2017/1/20</td>
-                      <td>-</td>
-                    </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <!-- /.col -->
-              </div>             
+              <!-- /.row -->          
                 
               </div>
             </div>
