--- a/src/main/resources/templates/question/question.html
+++ b/src/main/resources/templates/question/question.html
@@ -168,7 +168,7 @@
                                     <td>3</td>
                                     <td>  </td>
                                     <td>2K数字电影放映机的分辨率为：</td>
-                                    <td ><a href="/question/details" style="color: #fff;">在线测试</a></td>
+                                    <td ><a href="/question/details">在线测试</a></td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
@@ -177,7 +177,7 @@
                                     <td>3</td>
                                     <td>  </td>
                                     <td>4K的像素数是2K像素数的几倍？</td>
-                                    <td ><a href="/question/details" style="color: #fff;">在线测试</a></td>
+                                    <td ><a href="/question/details">在线测试</a></td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
@@ -186,7 +186,7 @@
                                     <td>3</td>
                                     <td>  </td>
                                     <td>数字电影在播放视频图像是，至少每秒要达到多少帧？</td>
-                                    <td ><a href="/question/details" style="color: #fff;">在线测试</a></td>
+                                    <td ><a href="/question/details">在线测试</a></td>
                                 </tr>
                                 <tr>
                                     <td>4</td>
@@ -195,7 +195,7 @@
                                     <td>3</td>
                                     <td>  </td>
                                     <td>当机房同时装有B、C、S、E系列机型和LP系列机型，机房温度应该控制在多少？</td>
-                                    <td ><a href="/question/details" style="color: #fff;">在线测试</a></td>
+                                    <td ><a href="/question/details">在线测试</a></td>
                                 </tr>
                                 <tr>
                                     <td>5</td>
@@ -204,7 +204,7 @@
                                     <td>3</td>
                                     <td>  </td>
                                     <td>测量机房温湿度，温湿度计放在哪里最合适？</td>
-                                    <td ><a href="/question/details" style="color: #fff;">在线测试</a></td>
+                                    <td ><a href="/question/details">在线测试</a></td>
                                 </tr>
                                 <tr>
                                     <td>6</td>
@@ -213,7 +213,7 @@
                                     <td>3</td>
                                     <td>  </td>
                                     <td>什么是放映机的约定方向？</td>
-                                    <td ><a href="/question/details" style="color: #fff;">在线测试</a></td>
+                                    <td ><a href="/question/details">在线测试</a></td>
                                 </tr>
                                 <tr>
                                     <td>7</td>
@@ -222,7 +222,7 @@
                                     <td>3</td>
                                     <td>  </td>
                                     <td>在放映机约定方向中，R代表放映机的哪一侧？</td>
-                                    <td ><a href="/question/details" style="color: #fff;">在线测试</a></td>
+                                    <td ><a href="/question/details">在线测试</a></td>
                                 </tr>
                                 <tr>
                                     <td>8</td>
@@ -231,7 +231,7 @@
                                     <td>3</td>
                                     <td>  </td>
                                     <td>DP2K-20C放映机外盖板由几块盖板组成？</td>
-                                    <td ><a href="/question/details" style="color: #fff;">在线测试</a></td>
+                                    <td ><a href="/question/details">在线测试</a></td>
                                 </tr>
                                 <tr>
                                     <td>9</td>
@@ -240,7 +240,7 @@
                                     <td>3</td>
                                     <td>  </td>
                                     <td>位于放映机左侧盖板内的引擎仓盖板叫什么？</td>
-                                    <td ><a href="/question/details" style="color: #fff;">在线测试</a></td>
+                                    <td ><a href="/question/details" >在线测试</a></td>
                                 </tr>
                                 <tr>
                                     <td>10</td>
@@ -249,7 +249,7 @@
                                     <td>3</td>
                                     <td>  </td>
                                     <td>拆卸密封盖板并进行安装，都要使用安全认证钥匙进行安全认证，否则会出现的报错代码是什么？</td>
-                                    <td ><a href="/question/details" style="color: #fff;">在线测试</a></td>
+                                    <td ><a href="/question/details">在线测试</a></td>
                                 </tr>
                                 </tbody>
                             </table>
