--- a/src/main/resources/templates/base/equipment/search.html
+++ b/src/main/resources/templates/base/equipment/search.html
@@ -99,13 +99,11 @@
                         <label>种类：</label>
                         <select class="form-control" name="type">
                           <option>放映机</option>
-                          <option>扬声器</option>
+                          <option>音响</option>
                           <option>服务器</option>
                           <option>音频处理器</option>
                           <option>功放设备</option>
                           <option>3D系统</option>
-                          <option>4D系统</option>
-                          <option>银幕</option>
                         </select>
                       </div>
                     </div>
@@ -122,7 +120,7 @@
                     <div class="col-2 float-lg-left">
                       <label>品牌：</label>
                       <select class="form-control" name="brand">
-                        <option>科视</option>
+                        <option>可视</option>
                         <option>巴可</option>
                         <option>杜比</option>
                         <option>戴尔</option>
@@ -141,7 +139,14 @@
                     </div>
                     <div class="col-2 float-lg-left">
                       <label>型号：</label>
-                      <input type="text" class="form-control" placeholder="例：CP4325-RGB" name="responsible">
+                      <select class="form-control" name="brand">
+                        <option>CLP </option>
+                        <option>SLP </option>
+                        <option>B </option>
+                        <option>C </option>
+                        <option>L </option>
+                        <option>LHC </option>
+                      </select>
                     </div>
                   </div>
                 </div>
@@ -275,46 +280,6 @@
                 <td >DP2K-10S</td>
                 <th>详情</th>
                 <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-10s">官网详情</a></th>
-              </tr>
-              <tr>
-                <td >9</td>
-                <td >服务器</td>
-                <td > </td>
-                <td >GDC</td>
-                <td > </td>
-                <td >SX-2001A</td>
-                <th>详情</th>
-                <th>官网详情</th>
-              </tr>
-              <tr>
-                <td >10</td>
-                <td >服务器</td>
-                <td > </td>
-                <td >巴可</td>
-                <td > </td>
-                <td >Barco ICMP 巴可灵睿ICMP（带HDMI2.0）</td>
-                <th>详情</th>
-                <th>官网详情</th>
-              </tr>
-              <tr>
-                <td >11</td>
-                <td >服务器</td>
-                <td > </td>
-                <td >杜比</td>
-                <td > </td>
-                <td >IMS2000</td>
-                <th>详情</th>
-                <th>官网详情</th>
-              </tr>
-              <tr>
-                <td >12</td>
-                <td >功放</td>
-                <td > </td>
-                <td >飞达</td>
-                <td > </td>
-                <td >FPT-8004</td>
-                <th>详情</th>
-                <th>官网详情</th>
               </tr>
               </tbody>
             </table>
