--- a/src/main/resources/templates/documents/handbook.html
+++ b/src/main/resources/templates/documents/handbook.html
@@ -94,30 +94,19 @@
               <form role="form">
                 <div class="card-body">
                   <div class="form-group row">
-                    <div class="col-3">
+                    <div class="col-2">
                       <label>设备类型</label>
                       <div class="form-group">
                         <!--<label>Select</label>-->
                         <select class="form-control">
                           <option>放映机</option>
                           <option>服务器</option>
-                          <option>扬声器</option>
+                          <option>音响</option>
                         </select>
                       </div>
                     </div>
-                    <div class="col-3">
-                      <label>品牌</label>
-                      <div class="form-group">
-                        <!--<label>Select</label>-->
-                        <select class="form-control">
-                          <option>巴可</option>
-                          <option>科视</option>
-                          <option>NEC</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="col-3">
-                      <label>型号</label>
+                    <div class="col-2">
+                      <label>设备型号</label>
                       <div class="form-group">
                         <!--<label>Select</label>-->
                         <select class="form-control">
@@ -127,7 +116,7 @@
                         </select>
                       </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                       <label>故障类型</label>
                       <div class="form-group">
                         <!--<label>Select</label>-->
@@ -138,7 +127,7 @@
                         </select>
                       </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                       <label>故障代码：</label>
                       <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：5004">
                     </div>
