--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
@@ -191,7 +191,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <h3 class="card-title">影厅一周温度变化</h3>
+                                    <h3 class="card-title">一周温度变化</h3>
                                     <a href="javascript:void(0);"></a>
                                 </div>
                             </div>
@@ -261,7 +261,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <h3 class="card-title">全国影院设备使用比例</h3>
+                                    <h3 class="card-title">影厅各类设备比例</h3>
                                     <a href="javascript:void(0);"></a>
                                 </div>
                             </div>
@@ -277,7 +277,7 @@
 <!--                                        <div class="row">-->
 <!--                                            <select class="form-control col-sm-6">-->
 <!--                                                <option>放映机</option>-->
-<!--                                                <option>扬声器</option>-->
+<!--                                                <option>音响</option>-->
 <!--                                                <option>功放</option>-->
 <!--                                                <option>服务器</option>-->
 <!--                                                <option>3D系统</option>-->
@@ -313,7 +313,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <h3 class="card-title">影厅一周湿度变化</h3>
+                                    <h3 class="card-title">一周湿度变化</h3>
                                     <a href="javascript:void(0);"></a>
                                 </div>
                             </div>
@@ -398,7 +398,7 @@
                                         </div>
                                     </div>
                                     <h3 class="card-title">
-                                        影厅银幕亮度
+                                        银幕亮度
                                     </h3>
                                     <a href="javascript:void(0);"></a>
                                 </div>
@@ -666,7 +666,7 @@
                                     </div>
                                     <h3 class="card-title">
                                         <!--                                        <i class="fa fa-th mr-1"></i>-->
-                                        影厅最高声压级
+                                        最高声压级
                                     </h3>
                                     <a href="javascript:void(0);"></a>
                                 </div>
@@ -756,7 +756,7 @@
                       <i class="fa fa-ellipsis-v"></i>
                     </span>
                                         <input type="checkbox" value="" name="">
-                                        <span class="text">放映机维护</span>
+                                        <span class="text">开会</span>
                                         <small class="badge badge-info"><i class="fa fa-clock-o"></i> 4 hours</small>
                                         <div class="tools">
                                             <i class="fa fa-edit"></i>
@@ -769,7 +769,7 @@
                       <i class="fa fa-ellipsis-v"></i>
                     </span>
                                         <input type="checkbox" value="" name="">
-                                        <span class="text">扬声器故障检测</span>
+                                        <span class="text">还是开会</span>
                                         <small class="badge badge-warning"><i class="fa fa-clock-o"></i> 1 day</small>
                                         <div class="tools">
                                             <i class="fa fa-edit"></i>
@@ -782,7 +782,7 @@
                       <i class="fa fa-ellipsis-v"></i>
                     </span>
                                         <input type="checkbox" value="" name="">
-                                        <span class="text">影厅加湿</span>
+                                        <span class="text">加班开会</span>
                                         <small class="badge badge-success"><i class="fa fa-clock-o"></i> 3 days</small>
                                         <div class="tools">
                                             <i class="fa fa-edit"></i>
@@ -795,7 +795,7 @@
                       <i class="fa fa-ellipsis-v"></i>
                     </span>
                                         <input type="checkbox" value="" name="">
-                                        <span class="text">影厅空气质量调节</span>
+                                        <span class="text">放假啦</span>
                                         <small class="badge badge-primary"><i class="fa fa-clock-o"></i> 1 week</small>
                                         <div class="tools">
                                             <i class="fa fa-edit"></i>
@@ -1521,7 +1521,7 @@
         legend: {
             orient: 'vertical',
             left: 'left',
-            data: ['科视','巴可','NEC']
+            data: ['科视Christie','巴可','NEC']
         },
         series : [
             {
@@ -1530,7 +1530,7 @@
                 radius : '55%',
                 center: ['50%', '60%'],
                 data:[
-                    {value:335, name:'科视'},
+                    {value:335, name:'科视Christie'},
                     {value:310, name:'巴可'},
                     {value:234, name:'NEC'}
                 ],
