--- a/src/main/resources/templates/task/calendar_manage.html
+++ b/src/main/resources/templates/task/calendar_manage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>日常工作管理</title>
+  <title>日常任务管理</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -115,9 +115,9 @@
                 </div>
                 <!-- /btn-group -->
                 <!--                <div class="input-group">-->
-                <input id="new-event-title" type="text" class="form-control" placeholder="事件标题">放映机光路清洁</input>
+                <input id="new-event-title" type="text" class="form-control"  value="放映机光路清洁">
                 <br>
-                <textarea id="new-event-detail" class="form-control" placeholder="请输入相关事件信息" rows="2" cols="5"></textarea>
+                <textarea id="new-event-detail" class="form-control" value="放映机光路清洁" rows="2" cols="5"></textarea>
                 <br>所在影厅
                 <select class="form-control">
                   <option value="server">影厅一</option>
@@ -153,9 +153,9 @@
                   <option value="李骏">李骏</option>
                 </select>
                 <br>开始时间：
-                <input id="new-event-start-time" type="time" class="form-control">09:00</input>
+                <input id="new-event-start-time" type="time" class="form-control" value = 09:00:00>
                 <br>结束时间：
-                <input id="new-event-end-time" type="time" class="form-control">11:00</input>
+                <input id="new-event-end-time" type="time" class="form-control" value = 11:00:00>
                 <br>
                 <div class="input-group-append">
                   <button id="add-new-event" type="button" class="btn btn-warning btn-flat">添加</button>
