--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -110,7 +110,7 @@
                 <li class="nav-item">
                     <a href="/task/calendar_manage" class="nav-link">
                         <i class="fa fa-calendar nav-icon"></i>
-                        <p>日常任务总览</p>
+                        <p>日常任务管理</p>
                     </a>
                 </li>
                 <li class="nav-item">
